<resources>
    <string name="app_name">Selery</string>
    <!--miscellaneous-->
    <string name="misc_please_wait">Espere un momento</string>
    <string name="misc_required_field">Campo requerido</string>
    <string name="misc_error">Error</string>
    <string name="misc_hello">Hola</string>
    <string name="misc_admiration">!</string>
    <string name="dd">Día(s)</string>
    <string name="misc_Yes">Si</string>
    <string name="misc_No">No</string>
    <string name="misc_Alert">Alerta</string>
    <string name="misc_About">Acerca De</string>
    <string name="misc_Logout">Cerrar Sesión</string>
    <string name="misc_Settings">Ajustes</string>
    <string name="misc_Profile">Perfil</string>
    <string name="misc_ChangePassword">Cambiar password</string>
    <string name="misc_years">años</string>


    <!--Registration-->
    <string name="reg_register">Registrarme</string>
    <string name="reg_email_registration">E-mail</string>
    <string name="reg_login">Ya tengo cuenta</string>
    <string name="reg_first_name">Nombre</string>
    <string name="reg_last_name">Apellido</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirmar password</string>
    <string name="reg_user_exists">El usuario ya está registrado.</string>
    <string name="reg_invalid_email">El email no es válido</string>
    <string name="reg_password_mismatch">Password y Confirmar password no son iguales</string>
    <string name="reg_user_create_error">Error al registrar el usuario</string>
    <string name="reg_error">Ha ocurrido un error</string>
    <string name="reg_program_select">Llegó la hora de elegir un PROGRAMA que te ayude a completar tu meta</string>
    <string name="reg_program_change_question">Actualmente tiene un programa pendiente de iniciar, desea cambiar de programa?</string>
    <string name="reg_email_login">Ingresar con mi email</string>
    <string name="reg_access_denied">Acceso denegado.</string>
    <string name="reg_personal_information_msg1">Bienvenido a Selery!</string>
    <string name="reg_personal_information_msg2">A continuación te pedimos información personal para conocer mas sobre la proporción de tu peso y estatura, y saber que programa te podemos recomendar.</string>
    <string name="reg_personal_information_gender">Sexo</string>
    <string name="reg_personal_information_male">Hombre</string>
    <string name="reg_personal_information_female">Mujer</string>
    <string name="reg_personal_information_weight">Peso</string>
    <string name="reg_personal_information_kg">Kgs</string>
    <string name="reg_personal_information_height">Estatura</string>
    <string name="reg_personal_information_meters">mts.</string>
    <string name="reg_personal_information_cms">cms.</string>
    <string name="reg_personal_information_birthdate">Fecha de nacimiento</string>
    <string name="reg_personal_information_birthdateformat">Seleccione fecha de nacimiento</string>
    <string name="reg_personal_information_activity">Actividad</string>
    <string name="reg_personal_information_activityprompt">Seleccionar actividad</string>
    <string name="reg_personal_information_infcontinue">Siguiente</string>
    <string name="reg_min_user_age">La edad mínima requerida es de</string>
    <string name="reg_MinCalories">1200</string>
    <string name="reg_MaxCalories">3500</string>
    <string name="reg_CaloriesValidationMessage">El valor de calorías no es válido, revisar estatura y peso.</string>

    <!--Workout-->
    <string name="wkt_program_item_BGColor">#00C7BE</string>
    <string name="wkt_program_item_BGAlternateColor">#1DA1CA</string>
    <string name="wkt_title_activity_program_list">Programas</string>
    <string name="wkt_title_activity_program_select">Seleccione un programa</string>
    <string name="wkt_title_activity_program_start">Inciar el programa</string>
    <string name="wkt_select_program">Elegir este programa</string>
    <string name="wkt_select_program_text1">Actualmente hay</string>
    <string name="wkt_select_program_text2">perosona(s) en este reto.</string>
    <string name="wkt_selected_program_text3">Seleccoinado</string>
    <string name="wkt_duration">Duración :</string>
    <string name="wkt_start_program">Iniciar el programa ahora!</string>
    <string name="wkt_start_program_text1">Felicidades, usted está registrado en el programa</string>




</resources>
