<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@mipmap/registro">
    <View
        android:id="@+id/frame2"
        android:layout_width="1dp"
        android:layout_height="50dp" />
    <ImageView
        android:id="@+id/image_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launchscreen"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="1dp"
        android:layout_height="8dp" />
    <!-- Email  -->
    <EditText
        android:id="@+id/text_email"
        android:text="user1@selery.mx"
        android:inputType="textEmailAddress"
        android:hint="@string/reg_email"
        android:layout_gravity="center_horizontal"
        style="@style/editInput">
        <requestFocus />
    </EditText>
    <View
        android:layout_width="1dp"
        android:layout_height="8dp" />
    <!-- Password  -->
    <EditText
        android:id="@+id/text_password"
        android:text="123"
        android:inputType="textPassword"
        style="@style/editInput"
        android:hint="@string/reg_password"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="1dp"
        android:layout_height="8dp" />
    <!-- Login  -->
    <Button
        android:id="@+id/button_login"
        android:text="@string/reg_email_login"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        style="@style/button3" />
</LinearLayout>