<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/login"
    >
    <View
        android:id="@+id/view_frame2"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />
    <ImageView
        android:id="@+id/image_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view_frame2"
        android:src="@mipmap/ic_launchscreen" />
    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reg_register"
        android:layout_below="@id/image_main_logo"
        android:textColor="#FFFFFF" />
    <View
        android:id="@+id/view_frame3"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_below="@id/text_register" />

    <Button
        android:id="@+id/button_email_registration"
        android:textAllCaps="false"
        android:text="@string/reg_email_registration"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@id/view_frame3"
        android:layout_centerHorizontal="true"
        style="@style/button" />

    <Button
        android:id="@+id/button_login"
        android:textAllCaps="false"
        android:text="@string/reg_login"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignRight="@id/button_email_registration"
        android:layout_below="@id/button_email_registration"
        style="@style/button2" />

    <View
        android:id="@+id/view_frame5"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
